General code cleanup.
o removed old stuff no longer used
o fixed some "eclipse" warnings
o fixed a lot of autoboxing/casting stuff
o used FindBugs and actually found 1 real bug 
  (XaLogicalLog leaked in a hashmap for read only tx's during recovery)


git-svn-id: https://svn.neo4j.org/projects/neo/trunk@59 0b971d98-bb2f-0410-8247-b05b2b5feb2a